# redragon-k629-controller

./: .gitignore  .prettierignore  LICENSE  README.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml
backend/: cli.ts  color.ts  controller.ts  device.ts  effect.ts  index.ts  layout.ts  protocol.ts  runner.ts  server.ts  start-server.ts
backend/commands/: keyboard.commands.ts  registry.ts  types.ts  validate.ts
backend/config/: 99-redragon.rules
backend/decorators/: logging-device.ts
backend/effects/: animations.ts  audio-capture.ts  audio-visualizer.ts  dispatcher.ts  fft.ts  index.ts  plugin-loader.ts  rainbow.ts  registry.ts  static.ts  typing-reactive.ts  wave.ts
backend/factory/: app-factory.ts
docs/: ARCHITECTURE.md  CHANGELOG.md  FIRMWARE-EFFECTS.md  NEXT-STEPS.md  PRODUCTION-READINESS.md
frontend/: angular.json  package.json  proxy.conf.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
packaging/: redragon-controller.desktop
scripts/: bundle-backend.sh  install-udev.sh
src/: cli.ts  color.ts  controller.ts  device.ts  effect.ts  index.ts  layout.ts  protocol.ts  runner.ts  server.ts  start-server.ts
tests/: color.test.ts  controller.test.ts  device.test.ts  effects.test.ts  layout.test.ts  protocol.test.ts  runner.test.ts  server.test.ts  tsconfig.json
tools/: check-row.ts  debug-layout.ts  find-key.ts  identify-keys.ts  map-all.ts  map-matrix.ts  map-quick.ts  test-keys.ts
(+67 files in other folders)
